--- a/EF.Model/EF.Model.csproj
+++ b/EF.Model/EF.Model.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LCDbContext.cs" />
+    <Compile Include="Models\tb_mq.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\tb_debuglog.cs" />
     <Compile Include="Models\tb_error.cs" />
